--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "CarInsurance.Api": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
